Fix home page link

--- a/contact.html
+++ b/contact.html
@@ -105,11 +105,11 @@
       <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required></textarea>
 
       <button type="submit">
-        <a href="/index.html" style="text-decoration: none; color:azure">Send Message</a>
+        <a href="index.html" style="text-decoration: none; color:azure">Send Message</a>
       </button>
 
       <button style="margin-left: 4rem;">
-      <a href="/index.html" style="text-decoration: none; color:azure">← Back to Home</a>
+      <a href="index.html" style="text-decoration: none; color:azure">← Back to Home</a>
     </button>
     </form>
 
