Fix home page link

--- a/udaipur.html
+++ b/udaipur.html
@@ -15,7 +15,7 @@
     </p>
 
     <h3>City Palace</h3>
-    <img src="/images/citypalace.jpg" alt="City Palace Udaipur">
+    <img src="images/citypalace.jpg" alt="City Palace Udaipur">
     <p>
       The City Palace is a royal residence whose construction began in 1553 under Maharana Udai Singh and continued over 400 years.
       Located near Lake Pichola, the complex includes smaller palaces and temples such as Jag Mandir, Lake Palace, and Jagdish Temple.
@@ -23,7 +23,7 @@
     </p>
 
     <h3>Lake Pichola</h3>
-    <img src="/images/pichola.jpg" alt="Lake Pichola">
+    <img src="images/pichola.jpg" alt="Lake Pichola">
     <p>
       An artificial lake created in 1362 AD, Lake Pichola is one of Udaipur’s most iconic attractions.
       Surrounded by temples, palaces, and restaurants, the lake offers stunning sunrise and sunset views.
