--- a/vietnam.html
+++ b/vietnam.html
@@ -16,10 +16,10 @@
     <h2>Top Attractions:</h2>
     <p>Halong Bay, Ho Chi Minh City, Hoi An, Sapa, and Da Nang.</p>
     <h3>Halong Bay</h3>
-    <img src="/images/hlbay.jpg">
+    <img src="images/hlbay.jpg">
     <p>A UNESCO World Heritage Site, Halong Bay stuns with its emerald waters and thousands of towering limestone islands. Cruising here feels like drifting through a dream.</p>
     <h3>Sapa</h3>
-    <img src="/images/sapa.avif">
+    <img src="images/sapa.avif">
 
     <p>Nestled in northern Vietnam, Sapa is a peaceful mountain retreat known for its lush rice terraces, cool climate, and rich hill-tribe cultures. A haven for trekkers and soul-seekers alike.</p>
     
