--- a/udaipur.html
+++ b/udaipur.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="places.css" />
 </head>
 <body>
+
+  <div class="video-container">
+    <video autoplay muted loop playsinline>
+      <source src="images/12037404_1080_1920_30fps.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+  </div>
+
+<div class="content">
   <div class="container">
     <h1>Udaipur</h1>
     <p>
@@ -33,5 +43,6 @@
     
     <a href="index.html" class="back-link">← Back to Home</a>
   </div>
+</div>
 </body>
 </html>
